--- a/inst/tutorials/Practical1/EP03_Likelihood_Practical1.Rmd
+++ b/inst/tutorials/Practical1/EP03_Likelihood_Practical1.Rmd
@@ -2,14 +2,14 @@
 title: "Likelihood - Practical 1: Linear Regression Models in R"
 output: 
   learnr::tutorial:
-     allow_skip: true
+    allow_skip: true
 runtime: shiny_prerendered
 ---
 
 ```{r setup, include=FALSE}
 library("learnr")
 load("Data.RData")
-knitr::opts_chunk$set(echo = FALSE)
+options(tutorial.exercise.timelimit = 1200)
 ```
 
 
