--- a/inst/tutorials/Practical5/EP03_Survival_Practical4.Rmd
+++ b/inst/tutorials/Practical5/EP03_Survival_Practical4.Rmd
@@ -2,7 +2,7 @@
 title: "Survival - Practical 4: Cox PH Models Extensions"
 output: 
   learnr::tutorial:
-     allow_skip: true
+    allow_skip: true
 runtime: shiny_prerendered
 ---
 
@@ -14,7 +14,8 @@ library("splines")
 data("lung", package = "survival")
 lung$sex <- factor(lung$sex, labels = c("male", "female"))
 lung <- with(lung, lung[complete.cases(time, status, sex, age, ph.karno), ])
-knitr::opts_chunk$set(echo = FALSE)
+#knitr::opts_chunk$set(echo = FALSE)
+options(tutorial.exercise.timelimit = 1200)
 ```
 
 
