--- a/inst/tutorials/Practical2/EP03_Survival_Practical1.Rmd
+++ b/inst/tutorials/Practical2/EP03_Survival_Practical1.Rmd
@@ -10,6 +10,7 @@ runtime: shiny_prerendered
 library("learnr")
 library("survival")
 load("Data.RData")
+knitr::opts_chunk$set(echo = FALSE)
 options(tutorial.exercise.timelimit = 1200)
 ```
 
