--- a/inst/tutorials/Practical4/EP03_Survival_Practical3.Rmd
+++ b/inst/tutorials/Practical4/EP03_Survival_Practical3.Rmd
@@ -12,6 +12,7 @@ library("survival")
 library("lattice")
 library("splines")
 load("Data.RData")
+knitr::opts_chunk$set(echo = FALSE)
 options(tutorial.exercise.timelimit = 1200)
 ```
 
