--- a/inst/tutorials/Practical5/EP03_Survival_Practical4.Rmd
+++ b/inst/tutorials/Practical5/EP03_Survival_Practical4.Rmd
@@ -14,7 +14,7 @@ library("splines")
 data("lung", package = "survival")
 lung$sex <- factor(lung$sex, labels = c("male", "female"))
 lung <- with(lung, lung[complete.cases(time, status, sex, age, ph.karno), ])
-#knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE)
 options(tutorial.exercise.timelimit = 1200)
 ```
 
